# mumps-problem-example

./: Cargo.toml  README.md  flake.nix
nix/mumps/: mumps.nix
nix/mumps/pkgconfig/: dmumps.pc  mpiseq.pc  mumps_common.pc  pord.pc
src/: main.rs
