[package]
name = "mumps-problem-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
russell_lab = { git = "https://github.com/molysgaard/russell.git", branch = "morten-fixes" }
russell_sparse = { git = "https://github.com/molysgaard/russell.git", branch = "morten-fixes" }
